<resources>
    <string name="app_name">NewsOnLine</string>
    <string name="main_bottom_news">新闻</string>
    <string name="main_bottom_video">视频</string>
    <string name="main_bottom_notice">关注</string>
    <string name="main_bottom_mine">我的</string>

    <string name="isNotConnect">网络未连接，请连接网络......</string>
    <string name="need_agree_all_permission_req">需要同意所有权限请求</string>
    <string name="login_immediately">立即登录</string>
    <string name="setting">设置</string>
    <string name="night">夜间</string>
    <string name="collect">收藏</string>
    <string name="notice">关注</string>
    <string name="comment">评论</string>
    <string name="feedback">反馈</string>
    <string name="update">更新</string>
    <string name="find_new_version">发现最新版本</string>
    <string name="already_new_version">已经是最新版本</string>
    <string name="input_login_hint">请输入手机号</string>
    <string name="input_pwd_hint">请输入密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="login">登录</string>
    <string name="other_login_style">其他登录方式</string>
    <string name="no_account_imm_register">没有账号?   立即注册</string>
    <string name="click_again_to_exit">再按一次退出新闻在线</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="input_phone_code_hint">请输入手机验证码</string>
    <string name="get_phone_code">获取验证码</string>
    <string name="enter_news">进入新闻</string>
    <string name="register">注册</string>
    <string name="input_phone_format_error">输入手机号格式错误</string>
    <string name="get_phone_code_error">获取验证码错误!</string>
    <string name="phone_code_error">验证码错误!</string>
    <string name="OK">OK</string>
    <string name="register_success">注册成功!当前的初始化密码是123456,请及时更新密码!</string>
    <string name="login_success">登录成功!正在跳转...</string>
    <string name="please_change_pwd">请及时更改初始密码!</string>
    <string name="input_old_pwd_hint">请输入原始密码</string>
    <string name="input_new_pwd_hint">请输入新密码</string>
    <string name="again_new_pwd_hint">再次输入新密码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="not_use_init_pwd">不能使用初始化密码!</string>
    <string name="pwd_format_error">密码的格式错误!</string>
    <string name="pwd_format">密码长度大于6且小于16. \n 必须是字母和数字!</string>
    <string name="not_equal_alreay_pwd">不能使用之前的密码!</string>
</resources>
