<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/mine_constraint_layout"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/mine_user_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base202dp"
        android:background="@color/color_363636">

        <com.jdan.newsonline.widget.imageview.CircleImageView
            android:id="@+id/mine_user_img"
            android:layout_width="@dimen/base78dp"
            android:layout_height="@dimen/base78dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/default_head" />

        <TextView
            android:id="@+id/mine_user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mine_user_img"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/base5dp"
            android:text="@string/login_immediately"
            android:textColor="@color/color_f7f7f7"
            android:textSize="@dimen/base15dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mine_center_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base65dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/mine_user_rl">

        <LinearLayout
            android:id="@+id/mine_collect_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base6dp"
                android:src="@mipmap/collect" />

            <TextView
                android:layout_marginTop="@dimen/base6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collect" />
        </LinearLayout>

        <View style="@style/line_style" />


        <LinearLayout
            android:id="@+id/mine_night_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mine_night_iv"
                android:layout_marginBottom="@dimen/base6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/night" />

            <TextView
                android:layout_marginTop="@dimen/base6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night" />

        </LinearLayout>

        <View style="@style/line_style" />

        <LinearLayout
            android:id="@+id/mine_setting_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_marginBottom="@dimen/base6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting"
                android:contentDescription="TODO" />

            <TextView
                android:layout_marginTop="@dimen/base6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/mine_center_ll"
        style="@style/line_10dp_style"/>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@+id/view1"
        android:id="@+id/mine_notice_rl"
        style="@style/mine_20dp_20dp_rl">

        <TextView
            android:text="@string/notice"
            style="@style/mine_tv" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/gray_back"/>
    </RelativeLayout>
    <View
        android:id="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/mine_notice_rl"
        style="@style/line_16_16_style"/>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:id="@+id/mine_comment_rl"
        style="@style/mine_20dp_20dp_rl">

        <TextView
            android:text="@string/comment"
            style="@style/mine_tv" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/gray_back"/>
    </RelativeLayout>
    <View
        android:id="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/mine_comment_rl"
        style="@style/line_16_16_style"/>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@+id/view3"
        android:id="@+id/mine_feedback_rl"
        style="@style/mine_20dp_20dp_rl">

        <TextView
            android:text="@string/feedback"
            style="@style/mine_tv" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/gray_back"/>
    </RelativeLayout>
    <View
        android:id="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/mine_feedback_rl"
        style="@style/line_16_16_style"/>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@+id/view4"
        android:id="@+id/mine_update_rl"
        style="@style/mine_20dp_20dp_rl">

        <TextView
            android:text="@string/update"
            style="@style/mine_tv" />

        <TextView
            android:id="@+id/mine_update_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/base13dp"
            android:textColor="@color/color_999999"/>
    </RelativeLayout>
    <View
        app:layout_constraintTop_toBottomOf="@+id/mine_update_rl"
        style="@style/line_16_16_style"/>

</android.support.constraint.ConstraintLayout>