<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/modify_pwd_constraint_layout"
    android:background="@color/white">

    <include
        android:id="@+id/modify_pwd_toolbar_layout"
        layout="@layout/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/old_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/base15dp"
        android:layout_marginRight="@dimen/base15dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintTop_toBottomOf="@+id/modify_pwd_toolbar_layout">

        <EditText
            android:id="@+id/old_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_old_pwd_hint"
            android:inputType="phone"
            android:singleLine="true"
            android:textColorHint="@color/color_8e8e8e"
            android:textSize="@dimen/base15dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/base15dp"
        android:layout_marginRight="@dimen/base15dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintTop_toBottomOf="@+id/old_pwd_layout">

        <EditText
            android:id="@+id/new_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_new_pwd_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/color_8e8e8e"
            android:textSize="@dimen/base15dp" />

    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/new_pwd_format_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwd_format"
        android:layout_marginTop="@dimen/base5dp"
        android:layout_marginBottom="@dimen/base5dp"
        android:textColor="@color/color_b3c40000"
        app:layout_constraintTop_toBottomOf="@+id/new_pwd_layout"
        app:layout_constraintRight_toRightOf="@+id/new_pwd_layout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/again_new_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/base15dp"
        android:layout_marginRight="@dimen/base15dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintTop_toBottomOf="@+id/new_pwd_format_tv">

        <EditText
            android:id="@+id/again_new_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/again_new_pwd_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/color_8e8e8e"
            android:textSize="@dimen/base15dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/modify_pwd_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base40dp"
        android:layout_marginLeft="@dimen/base20dp"
        android:layout_marginRight="@dimen/base20dp"
        android:layout_marginTop="@dimen/base15dp"
        android:background="@drawable/btn_b3c40000_5_bg"
        android:text="@string/modify_pwd"
        android:textColor="@color/white"
        android:textSize="@dimen/base15dp"
        app:layout_constraintTop_toBottomOf="@+id/again_new_pwd_layout" />

</android.support.constraint.ConstraintLayout>