<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_constraint_layout"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_register_layout"
        layout="@layout/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base10dp"
        android:layout_marginLeft="@dimen/base15dp"
        android:layout_marginRight="@dimen/base15dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_register_layout">

        <EditText
            android:id="@+id/register_phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone_hint"
            android:inputType="phone"
            android:singleLine="true"
            android:textColorHint="@color/color_8e8e8e"
            android:textSize="@dimen/base15dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_code_layout"
        android:layout_width="@dimen/base200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/base15dp"
        android:layout_marginRight="@dimen/base20dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintRight_toLeftOf="@+id/get_phone_code_btn"
        app:layout_constraintTop_toBottomOf="@+id/register_phone_layout">

        <EditText
            android:id="@+id/register_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone_code_hint"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@color/color_8e8e8e"
            android:textSize="@dimen/base15dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/get_phone_code_btn"
        android:layout_width="@dimen/base110dp"
        android:layout_height="@dimen/base40dp"
        android:layout_marginRight="@dimen/base15dp"
        android:background="@drawable/btn_b3c40000_5_bg"
        android:text="@string/get_phone_code"
        android:textColor="@color/white"
        android:textSize="@dimen/base15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phone_layout" />

    <Button
        android:id="@+id/enter_news_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base40dp"
        android:layout_marginLeft="@dimen/base20dp"
        android:layout_marginRight="@dimen/base20dp"
        android:layout_marginTop="@dimen/base15dp"
        android:background="@drawable/btn_b3c40000_5_bg"
        android:text="@string/enter_news"
        android:textColor="@color/white"
        android:textSize="@dimen/base15dp"
        app:layout_constraintTop_toBottomOf="@+id/register_code_layout" />


</android.support.constraint.ConstraintLayout>